# ESD7-Project

./: .gitignore  .gitlab-ci.yml  ESD7-ML-proposal-figure.drawio  README.md  dsp.py  parallelDataGeneration.py  simulation.py
BigBrother/: Dockerfile  Makefile  README.md  apt_requirements.txt  dockerfile  esd7_project.err  logging.conf  pyproject.toml  run-on-ai-lab.sh  run-on-ai-lab2.sh  run.sh  run_batch.sh  run_batch2.sh
BigBrother/ai-lab/: README.md  ai_template.def  apt_req.txt  esd7_project.def  job.sh
BigBrother/docker/: Dockerfile  apt_requirements.txt
BigBrother/mathing/: expectedTrash.py
BigBrother/models/detector_15_12_2025/: model.keras  model_weights.weights.h5
BigBrother/results/26-09-2025_12:07:37/: sum_diff_model.keras
BigBrother/results/26-09-2025_12:07:37/logs/train/: events.out.tfevents.1758881258.Mikkel-laptop.150520.0.v2
BigBrother/results/26-09-2025_12:07:37/logs/validation/: events.out.tfevents.1758881258.Mikkel-laptop.150520.1.v2
BigBrother/results/26-09-2025_12:07:51/logs/train/: events.out.tfevents.1758881271.Mikkel-laptop.150794.0.v2
BigBrother/results/26-09-2025_12:15:53/: sum_diff_model.keras
BigBrother/src/: ai_handler.py  gen_test_data.py  logger.py  main-localize.py  main.py  main2.py  model.py  ntfy.py  split_training_validation_data.py
ROC calc/: main.py  (+1 more)
training_data_generation/: README.md  dataHandler.py  dsp_mini.py  inspect_data.py  parallelDataGeneration.py  pyproject.toml  simulation.py  tfrecord_to_numpy.py
training_data_generation/sweep/: plot_3d_scene.py  radiation_pattern.py  scratch.py  sweep_radar.py
(+88 files in other folders)
