[project]
name = "ai_template"
version = "0.1.0"
description = "Template for AI projects"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "graphviz>=0.21",
    "matplotlib>=3.10.6",
    "numpy>=2.3.2",
    "polars>=1.33.0",
    "pydot>=4.0.1",
    "python-ntfy>=0.10.0",
    "ruff>=0.12.12",
    "scikit-image>=0.25.2",
    "scikit-learn>=1.7.2",
    "tensorflow[and-cuda]>=2.12.0",
    "tqdm>=4.67.1",
    "ty>=0.0.1a20",
]
