[project]
name = "training-data-generation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipython>=9.5.0",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "plotly>=6.3.0",
    "polars>=1.33.1",
    "pyqt6>=6.10.1",
    "scipy>=1.16.2",
    "tqdm>=4.67.1",
]
